// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-toast-dialog AlwaysOpened 1`] = `
<DocumentFragment>
  <aside
    aria-labelledby="dialog-title-abc123"
    aria-live="polite"
    arial-modal="true"
    class="toast-dialog toast-dialog--transition"
    role="dialog"
  >
    <div
      class="toast-dialog__window"
    >
      <div
        class="toast-dialog__header"
      >
        <h2
          id="dialog-title-abc123"
        >
          Toast Dialog Heading
        </h2>
        <button
          aria-label="Close EbayToast"
          class="icon-btn toast-dialog__close icon-btn--transparent"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon icon--close"
            focusable="false"
            height="24px"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-close"
            />
          </svg>
        </button>
      </div>
      <div
        class="toast-dialog__main"
      >
        <p>
          Press \`Control-Option-v\` (Mac) to activate CTA button
        </p>
        <p>
          <a
            href="http://www.ebay.com"
          >
            www.ebay.com
          </a>
        </p>
      </div>
      <div
        class="toast-dialog__footer"
      >
        <button
          accesskey="v"
          class="btn btn--primary"
        >
          View Account
        </button>
      </div>
    </div>
  </aside>
  <p>
    For more info, please visit our 
    <a
      href="http://pages.ebay.com/help"
    >
      Help page
    </a>
  </p>
  <p>
    Please check 
    <a
      href="https://www.ebay.de/myb/PurchaseHistory"
    >
      My eBay page
    </a>
     for more details 
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-toast-dialog Default 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
  >
    Open Toast
  </button>
  <p>
    For more info, please visit our 
    <a
      href="http://pages.ebay.com/help"
    >
      Help page
    </a>
  </p>
  <p>
    Please check 
    <a
      href="https://www.ebay.de/myb/PurchaseHistory"
    >
      My eBay page
    </a>
     for more details 
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-toast-dialog WithAnimation 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
  >
    Open Toast
  </button>
  <aside
    aria-labelledby="dialog-title-abc123"
    aria-live="polite"
    arial-modal="true"
    class="toast-dialog toast-dialog--transition"
    hidden=""
    role="dialog"
  >
    <div
      class="toast-dialog__window"
    >
      <div
        class="toast-dialog__header"
      >
        <h2
          id="dialog-title-abc123"
        >
          Toast Dialog Heading
        </h2>
        <button
          aria-label="Close EbayToast"
          class="icon-btn toast-dialog__close icon-btn--transparent"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon icon--close"
            focusable="false"
            height="24px"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-close"
            />
          </svg>
        </button>
      </div>
      <div
        class="toast-dialog__main"
      >
        <p>
          Toast dialog paragraph text.
        </p>
        <p>
          <a
            href="http://www.ebay.com"
          >
            www.ebay.com
          </a>
        </p>
      </div>
      <div
        class="toast-dialog__footer"
      >
        <button
          class="btn btn--primary"
        >
          View Account
        </button>
      </div>
    </div>
  </aside>
  <p>
    For more info, please visit our 
    <a
      href="http://pages.ebay.com/help"
    >
      Help page
    </a>
  </p>
  <p>
    Please check 
    <a
      href="https://www.ebay.de/myb/PurchaseHistory"
    >
      My eBay page
    </a>
     for more details 
  </p>
</DocumentFragment>
`;
